force-app/main/default/objects/csfb__Conga_Solution__c/csfb__Conga_Solution__c.object-meta.xml
<CustomObject>
    <label>Conga Invoice Solution</label>
    <nameField>
        <label>Conga Solution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conga Invoice Solutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>