force-app/main/default/objects/csfb__Conga_Solution__c/fields/csfb__Button_body_field__c.field-meta.xml
<CustomField>
    <fullName>csfb__Button_body_field__c</fullName>
    <label>Button Body (URL)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>