force-app/main/default/objects/csfb__Conga_Solution__c/fields/csfb__Button_Link_API_Name__c.field-meta.xml
<CustomField>
    <fullName>csfb__Button_Link_API_Name__c</fullName>
    <label>Button/Link API Name</label>
    <type>TextArea</type>
</CustomField>