force-app/main/default/objects/csfb__Conga_Solution__c/fields/csfb__Composer_Parameters__c.field-meta.xml
<CustomField>
    <fullName>csfb__Composer_Parameters__c</fullName>
    <label>Composer Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>