force-app/main/default/objects/csfb__Conga_Solution__c/fields/csfb__CongaEmailTemplateCount__c.field-meta.xml
<CustomField>
    <fullName>csfb__CongaEmailTemplateCount__c</fullName>
    <label>Conga Email Template Count</label>
    <summaryForeignKey>csfb__Conga_Solution_Email_Template__c.csfb__Conga_Solution__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>