force-app/main/default/objects/csfb__Conga_Solution__c/fields/csfb__Formula_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>csfb__Formula_Field_API_Name__c</fullName>
    <label>Formula Field API Name</label>
    <type>TextArea</type>
</CustomField>