force-app/main/default/objects/csfb__Conga_Solution__c/fields/csfb__Is_Quick_Start__c.field-meta.xml
<CustomField>
    <fullName>csfb__Is_Quick_Start__c</fullName>
    <label>Is Quick Start</label>
    <length>80</length>
    <type>Text</type>
</CustomField>