force-app/main/default/objects/csfb__Conga_Solution__c/fields/csfb__Launch_C8_Formula_Button__c.field-meta.xml
<CustomField>
    <fullName>csfb__Launch_C8_Formula_Button__c</fullName>
    <formula>IF( OR(csfb__Sample_Record_Id__c = &quot;&quot;,  csfb__Button_Link_API_Name__c = &quot;&quot;), IMAGE( &quot;/resource/csfb__DisabledLaunchButton&quot; , &quot;Launch Composer&quot;), 

HYPERLINK(&quot;https://&quot; &amp; MID( $Api.Enterprise_Server_URL_320, FIND(&quot;://&quot;, $Api.Enterprise_Server_URL_100)+3, FIND( &quot;.com&quot;, $Api.Enterprise_Server_URL_100 )-4) 
&amp; &quot;servlet/servlet.Integration?lid=&quot; &amp; csfb__Weblink_Id__c 
&amp; &quot;&amp;eid=&quot; &amp; csfb__Sample_Record_Id__c &amp; &quot;&amp;ic=1&quot; 
, IMAGE( &quot;/resource/csfb__ComposerLaunchButton&quot; , &quot;Launch Composer&quot;), &quot;_blank&quot; ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Launch</label>
    <type>Text</type>
</CustomField>