force-app/main/default/objects/csfb__Conga_Solution__c/fields/csfb__Master_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>csfb__Master_Object_Type__c</fullName>
    <label>Master Object Type</label>
    <type>TextArea</type>
</CustomField>