force-app/main/default/objects/csfb__Conga_Solution__c/fields/csfb__Sample_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>csfb__Sample_Record_Id__c</fullName>
    <label>Sample Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>