force-app/main/default/objects/csfb__Conga_Solution__c/fields/csfb__Sample_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>csfb__Sample_Record_Name__c</fullName>
    <label>Sample Record Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>