force-app/main/default/objects/csfb__Conga_Solution__c/fields/csfb__Solution_Weblink_Syntax__c.field-meta.xml
<CustomField>
    <fullName>csfb__Solution_Weblink_Syntax__c</fullName>
    <label>Solution Weblink Syntax</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>