force-app/main/default/objects/csfb__Conga_Solution__c/fields/csfb__Weblink_Id__c.field-meta.xml
<CustomField>
    <fullName>csfb__Weblink_Id__c</fullName>
    <label>Weblink Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>