force-app/main/default/objects/csfb__Conga_Solution__c/listViews/csfb__All.listView-meta.xml
<ListView>
    <fullName>csfb__All</fullName>
    <columns>NAME</columns>
    <columns>csfb__Master_Object_Type__c</columns>
    <columns>csfb__Button_Link_API_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>